header account alignment fix

--- a/app/design/frontend/Quinoid/neuroclub/Magento_Theme/web/css/source/_extend.less
+++ b/app/design/frontend/Quinoid/neuroclub/Magento_Theme/web/css/source/_extend.less
@@ -1,4 +1,4 @@
-//Commeon styles
+//Common styles
 h1,h2,h3,h4,h5,h6,p{
   margin: 0;
 }
@@ -14,6 +14,15 @@ h1,h2,h3,h4,h5,h6,p{
   // margin-right: -15px;
   // margin-left: -15px;
 }
+.desktop-none
+{
+      display: none !important;
+  @media all and (max-width:768px)
+  {
+    display:block !important;
+  }
+}
+
 .margin{
   margin: 15px 0;
   padding: 15px 0;
@@ -257,12 +266,19 @@ button{
   -webkit-box-shadow: 0px 2px 15px 1px rgba(0, 0, 0, 0.1);
   -moz-box-shadow: 0px 2px 15px 1px rgba(0, 0, 0, 0.1);
   box-shadow: 0px 2px 15px 1px rgba(0, 0, 0, 0.1);
-}
-.nav-toggle{
-  &::before{
-    color: #e66698;
+  .nav-sections-items
+  {
+    .section-item-title
+    {
+          display: none;
+    }
+    .section-item-content
+    {
+        margin-top: 0;
+    }
   }
 }
+
 .page-header{
   position: fixed;
   width: 100%;
@@ -284,6 +300,20 @@ button{
   @media all and (max-width:767px){
     top: 0;
   }
+.header-account
+{
+  float: right;
+    margin-right: 65px;
+    width: 100px;
+    text-align: center;
+    margin-top: 16px;
+    a
+    {
+      color: #333;
+      font-weight: 600;
+    }
+}
+
   .logo{
     width: 40px;
     margin-top: 0;
@@ -358,6 +388,8 @@ button{
       font-weight: 600;
       text-transform: uppercase;
       color: #575757;
+      margin-bottom: 0;
+      padding-top: 7px;
       @media only screen and (min-width: 468px) {
         font-size: 14px;
       }
